cert-manager-files/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: rontest-io-ca
    cert-manager.io/duration: 2160h # 90d
    cert-manager.io/renew-before: 360h # 15d
spec:
  ingressClassName: nginx-custom-ingress
  tls:
  - hosts:
    - grafana.rontest.io
    secretName: grafana-rontest-io-key-pair
  rules:
  - host: grafana.rontest.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
